# loogck

./: .gitignore  README.md  TODO.txt  pyproject.toml
.github/workflows/: build.yml
demo/: loogck_static_mask.cast  readme.txt
loogck/: cli.py  file_tail.py  masking_follower.py
loogck/mask/: __init__.py  bounce.py  hexify.py  static.py
scripts/: generate_random_logs_logging.py  generate_random_structlogs.py  log_while_date.sh
